Fixed avatar alignment

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -392,6 +392,10 @@ a {
     &.divided-blue {
         background: white url(../img/bg-divided-blue.png) repeat-y;
         padding-bottom:40px;
+        .list-contributors {
+            li { margin-bottom: 18px; }
+
+        }
     }
     &.about {
         background: white url(../img/bg-about.jpg) no-repeat bottom left;
@@ -869,13 +873,10 @@ ul.logos {
         margin-right: 10px;
         border-radius: 3px;
     }
-    margin-top: 25px;
-    li {
-        padding-top: 10px;
-        div {
-            padding-top: 10px;
-        }
 
+    li {
+        padding-top: 0;
+        margin-bottom: 15px;
     }
 
 }
